Add logs to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 ### Project-specific
-.pyre_configuration
+logs/
 
 ### Vim
 ### From: https://github.com/github/gitignore/blob/master/Global/Vim.gitignore
